AAE-22809 rearranged query for multiple filters, sorting still to be implemented